// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ProfilePreviewScreenTemplate renders correctly with content 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "multiline": true,
                    "style": [
                      {
                        "alignSelf": "stretch",
                        "color": "#ffffff",
                        "flex": 1,
                        "fontSize": 18,
                        "lineHeight": 18,
                      },
                      {
                        "width": 0,
                      },
                    ],
                    "value": "{"name":"default.prof"}",
                  },
                  "type": "TextInput",
                },
              ],
              "props": {
                "style": [
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "space-between",
                    "marginLeft": 48,
                    "marginRight": 48,
                  },
                  {
                    "backgroundColor": "#070724",
                  },
                  {
                    "marginLeft": 0,
                    "marginRight": 0,
                  },
                ],
              },
              "type": "View",
            },
          ],
          "props": {
            "onLayout": [Function],
            "style": [
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#070724",
              },
              undefined,
            ],
          },
          "type": "View",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`ProfilePreviewScreenTemplate renders correctly with empty content 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "multiline": true,
                    "style": [
                      {
                        "alignSelf": "stretch",
                        "color": "#ffffff",
                        "flex": 1,
                        "fontSize": 18,
                        "lineHeight": 18,
                      },
                      {
                        "width": 0,
                      },
                    ],
                    "value": "",
                  },
                  "type": "TextInput",
                },
              ],
              "props": {
                "style": [
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "space-between",
                    "marginLeft": 48,
                    "marginRight": 48,
                  },
                  {
                    "backgroundColor": "#070724",
                  },
                  {
                    "marginLeft": 0,
                    "marginRight": 0,
                  },
                ],
              },
              "type": "View",
            },
          ],
          "props": {
            "onLayout": [Function],
            "style": [
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              {
                "backgroundColor": "#070724",
              },
              undefined,
            ],
          },
          "type": "View",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;
